--- a/public/css/style.css
+++ b/public/css/style.css
@@ -435,6 +435,8 @@ p, ol, ul, blockquote {
 	Navbar
 --------------------------------------------------------------*/
 .navbar{
+  background-color: #b13124;
+  font-size: larger;
   box-shadow: -2px 7px 18px 0px rgba(0,0,0,0.32);
   -webkit-box-shadow: -2px 7px 18px 0px rgba(0,0,0,0.32);
   -moz-box-shadow: -2px 7px 18px 0px rgba(0,0,0,0.32);  
@@ -442,6 +444,13 @@ p, ol, ul, blockquote {
 
 .navbar a {
   transition: color 0.125s ease-in-out 0s;
+}
+.nav-item{
+  transition: border 0.125s ease-in-out 0s;
+  border-bottom: 2px solid transparent;
+}
+.nav-item:hover{
+  border-bottom: 2px solid white;
 }
 
 /*--------------------------------------------------------------
@@ -579,7 +588,74 @@ p, ol, ul, blockquote {
 .blog-entry .meta>div a:hover {
   color: #cccccc;
 }
-
+/*Button animated index*/
+.button1 {
+  position: relative;
+  padding: 19px 36px;
+  display: block;
+  text-decoration: none;
+  overflow: hidden;
+  border-radius: 40px;
+  border: none;
+  margin: 0 auto;
+ }
+ 
+ .button1 .span1 {
+  position: relative;
+  color: #fff;
+  font-family: Arial;
+  z-index: 1;
+ }
+ 
+ .button1 .liquid1 {
+  position: absolute;
+  top: -80px;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  background: #0d1128;
+  box-shadow: inset 0 0 50px rgba(0, 71, 119, 1);
+  transition: .5s;
+ }
+ 
+ .button1 .liquid1::after,
+ .button1 .liquid1::before {
+  content: '';
+  width: 200%;
+  height: 200%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -75%);
+  background: #fff;
+ }
+ 
+ .button1 .liquid1::before {
+  border-radius: 45%;
+  background: rgba(177, 49, 36,.5);
+  animation: animate 5s linear infinite;
+ }
+ 
+ .button1 .liquid1::after {
+  border-radius: 40%;
+  background: #b13124;
+  animation: animate 10s linear infinite;
+ }
+ 
+.button1:hover .liquid1 {
+  top: 10px;
+ }
+ 
+ @keyframes animate {
+  0% {
+   transform: translate(-50%, -75%) rotate(0deg);
+  }
+ 
+  100% {
+   transform: translate(-50%, -75%) rotate(360deg);
+  }
+ }
+ /*Button animated index FIN*/
 
 /* Contact Page Header */
 .contact-page-header {
