--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1012,7 +1012,7 @@ svg {
   overflow: hidden;
   text-align: start;
 }
-.evento-container img{
+.evento-container img{7
   position: absolute;
   border-radius: 10px;
   width: 150px;
